# Image-Processor

./: BMPReader.cpp  BMPReader.h  CMakeLists.txt  Filters.cpp  Filters.h  Image.h  ImageProcessing.cpp  ImageProcessing.h  Parser.cpp  Parser.h  README.md  image_processor.cpp
